--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a04dbfaa",
+   "id": "faa1e9dc",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ab7c702f",
+   "id": "2721f3ad",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0b10671",
+   "id": "d8773db9",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "85c0a174",
+   "id": "d72eafad",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "780e5d39",
+   "id": "8820c7ac",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "13b55a61",
+   "id": "6a737dcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "7e943f4e",
+   "id": "9406a88f",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "ba5e0060",
+   "id": "e72590d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "5b4fe148",
+   "id": "f6ddd08e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f6441e12",
+   "id": "52c807c8",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "343788f0",
+   "id": "e20718b9",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94e0b883",
+   "id": "e8875d5d",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "aa9ddfbe",
+   "id": "1bab8a88",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "d995656f",
+   "id": "99649ca9",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "e1eb141b",
+   "id": "faf3d603",
    "metadata": {
     "scrolled": false
    },
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "df1483ac",
+   "id": "7eed5c6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "867a6be7",
+   "id": "8385b23f",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "7e36f60f",
+   "id": "a9605e42",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "781be0f6",
+   "id": "9f4da5d5",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "0293af75",
+   "id": "12c54a33",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "3e1c8d48",
+   "id": "4da75dce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "9ddfd40f",
+   "id": "1543210c",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "8af2fd0a",
+   "id": "3cb16946",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "8a941977",
+   "id": "e5cd5e62",
    "metadata": {},
    "outputs": [
     {
@@ -671,8 +671,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "id": "bbffe39f",
+   "execution_count": 162,
+   "id": "04c20846",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [160], line 21\u001b[0m\n\u001b[1;32m     19\u001b[0m m\u001b[38;5;241m.\u001b[39mune_methode()\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(m\u001b[38;5;241m.\u001b[39mest_cree_par_mere)\n\u001b[0;32m---> 21\u001b[0m \u001b[38;5;28mprint\u001b[39m(m\u001b[38;5;241m.\u001b[39mest_cree_par_fille)\n",
+      "Cell \u001b[0;32mIn [162], line 21\u001b[0m\n\u001b[1;32m     19\u001b[0m m\u001b[38;5;241m.\u001b[39mune_methode()\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(m\u001b[38;5;241m.\u001b[39mest_cree_par_mere)\n\u001b[0;32m---> 21\u001b[0m \u001b[38;5;28mprint\u001b[39m(m\u001b[38;5;241m.\u001b[39mest_cree_par_fille)\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'Mere' object has no attribute 'est_cree_par_fille'"
      ]
     }
@@ -707,9 +707,9 @@
     "    \n",
     "class Fille(Mere):    \n",
     "    def __init__(self):\n",
-    "        super().__init__()\n",
     "        print(\"dans init fille\")\n",
     "        self.est_cree_par_fille = True\n",
+    "        super().__init__()\n",
     "    \n",
     "    def une_methode(self):\n",
     "        print(\"une methode dans fille\")\n",
@@ -722,19 +722,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "4faff0af",
+   "execution_count": 163,
+   "id": "c1483780",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dans init mere\n",
       "dans init fille\n",
+      "dans init mere\n",
       "une methode dans fille\n",
-      "True\n",
-      "True\n"
+      "f.est_cree_par_mere=True\n",
+      "f.est_cree_par_fille=True\n"
      ]
     }
    ],
@@ -742,13 +742,13 @@
     "f = Fille()\n",
     "f.une_methode()\n",
     "print(f\"{f.est_cree_par_mere=}\")\n",
-    "print(f\"{f.est_cree_par_fille}\")"
+    "print(f\"{f.est_cree_par_fille=}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c12a4ec3",
+   "id": "9053d182",
    "metadata": {},
    "outputs": [],
    "source": []
