--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "948e2769",
+   "id": "05090301",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "20b0863d",
+   "id": "0d54ebeb",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "ef3ec161",
+   "id": "75dca2d6",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "b562d2b4",
+   "id": "49c5890f",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "1197bfdd",
+   "id": "2667d730",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "30beef82",
+   "id": "a3779eb0",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "45f2d44e",
+   "id": "dd425b95",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3382f64f",
+   "id": "5d780009",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11dc7def",
+   "id": "ab98b172",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63326962",
+   "id": "7b011556",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -262,12 +262,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a56ab33",
+   "cell_type": "markdown",
+   "id": "b330251d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Jeudi \n",
+    "\n",
+    "## Matin\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
