--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "05090301",
+   "id": "1b6e7857",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "0d54ebeb",
+   "id": "8e9b1442",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "75dca2d6",
+   "id": "a878d0f4",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "49c5890f",
+   "id": "016e659f",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "2667d730",
+   "id": "28bea14b",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a3779eb0",
+   "id": "b48733ee",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "dd425b95",
+   "id": "4ea970e4",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "5d780009",
+   "id": "9e653d4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab98b172",
+   "id": "4e3516fb",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b011556",
+   "id": "801613ea",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -263,13 +263,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b330251d",
+   "id": "236e3b89",
    "metadata": {},
    "source": [
     "# Jeudi \n",
     "\n",
     "## Matin\n",
-    "\n"
+    "\n",
+    "* manipulation de CSV \n",
+    "    * création\n",
+    "    * lecture \n",
+    "    * utilisation du module CSV \n",
+    "    * utilisation de pandas (bibliothèque tierce)\n",
+    "        * très utilisé en datascience / analyse de données\n",
+    "    * création de graphique à l'aide de pandas / "
    ]
   }
  ],
