--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1b6e7857",
+   "id": "feb071b7",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "8e9b1442",
+   "id": "7177c2b0",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "a878d0f4",
+   "id": "d627c2e3",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "016e659f",
+   "id": "8a728e3c",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "28bea14b",
+   "id": "75bf4e28",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "b48733ee",
+   "id": "a9697699",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "4ea970e4",
+   "id": "7f0018e2",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "9e653d4d",
+   "id": "f92303de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e3516fb",
+   "id": "4d1ea4ba",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "801613ea",
+   "id": "f974ef36",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "236e3b89",
+   "id": "f3ebf75c",
    "metadata": {},
    "source": [
     "# Jeudi \n",
@@ -276,7 +276,7 @@
     "    * utilisation du module CSV \n",
     "    * utilisation de pandas (bibliothèque tierce)\n",
     "        * très utilisé en datascience / analyse de données\n",
-    "    * création de graphique à l'aide de pandas / "
+    "    * création de graphique à l'aide de pandas / matplotlib "
    ]
   }
  ],
