--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "feb071b7",
+   "id": "d97a74d1",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "7177c2b0",
+   "id": "900a331a",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "d627c2e3",
+   "id": "bdaec4fe",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "8a728e3c",
+   "id": "10d6997e",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "75bf4e28",
+   "id": "a49d05b8",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a9697699",
+   "id": "7568faef",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "7f0018e2",
+   "id": "517a2c0d",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "f92303de",
+   "id": "1d9043cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d1ea4ba",
+   "id": "c94e60da",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f974ef36",
+   "id": "9c0b8e91",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3ebf75c",
+   "id": "bf05022d",
    "metadata": {},
    "source": [
     "# Jeudi \n",
@@ -276,7 +276,9 @@
     "    * utilisation du module CSV \n",
     "    * utilisation de pandas (bibliothèque tierce)\n",
     "        * très utilisé en datascience / analyse de données\n",
-    "    * création de graphique à l'aide de pandas / matplotlib "
+    "    * création de graphique à l'aide de pandas / matplotlib \n",
+    "* manipulation de JSON\n",
+    "    * création / lecture avec la bibliothèque standart `json`"
    ]
   }
  ],
