--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d97a74d1",
+   "id": "7ac9f960",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "900a331a",
+   "id": "ccd59610",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "bdaec4fe",
+   "id": "d8a364ac",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "10d6997e",
+   "id": "2d81ac8c",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "a49d05b8",
+   "id": "cca11c1f",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "7568faef",
+   "id": "553606fc",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "517a2c0d",
+   "id": "3826726b",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "1d9043cf",
+   "id": "fb435c9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c94e60da",
+   "id": "8e1e1489",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c0b8e91",
+   "id": "100c1e51",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf05022d",
+   "id": "1ec26d2b",
    "metadata": {},
    "source": [
     "# Jeudi \n",
@@ -278,7 +278,23 @@
     "        * très utilisé en datascience / analyse de données\n",
     "    * création de graphique à l'aide de pandas / matplotlib \n",
     "* manipulation de JSON\n",
-    "    * création / lecture avec la bibliothèque standart `json`"
+    "    * création / lecture avec la bibliothèque standart `json`\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1280bb4a",
+   "metadata": {},
+   "source": [
+    "# Vendredi \n",
+    "\n",
+    "## Matin \n",
+    "\n",
+    "* installation de modules python / partage d'environnements\n",
+    "    * on ne partage pas le dossier du venv avec d'autres personnes / d'autres machines\n",
+    "    * on partage un fichier permetant de le reconstruire (le fichier requirements.txt)\n",
+    "        * pou"
    ]
   }
  ],
