--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7ac9f960",
+   "id": "954b0576",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "ccd59610",
+   "id": "1b4e96ec",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "d8a364ac",
+   "id": "a1a18ac3",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "2d81ac8c",
+   "id": "96731070",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "cca11c1f",
+   "id": "6b936cf6",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "553606fc",
+   "id": "f1ca99c8",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "3826726b",
+   "id": "116d0d7b",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "fb435c9b",
+   "id": "5e93263a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e1e1489",
+   "id": "fd86ec96",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "100c1e51",
+   "id": "107dba2e",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ec26d2b",
+   "id": "13dd7b18",
    "metadata": {},
    "source": [
     "# Jeudi \n",
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1280bb4a",
+   "id": "68fad6d7",
    "metadata": {},
    "source": [
     "# Vendredi \n",
@@ -294,7 +294,9 @@
     "* installation de modules python / partage d'environnements\n",
     "    * on ne partage pas le dossier du venv avec d'autres personnes / d'autres machines\n",
     "    * on partage un fichier permetant de le reconstruire (le fichier requirements.txt)\n",
-    "        * pou"
+    "        * pour le créer : `pip freeze > requirements.txt`\n",
+    "        * pour l'utiliser : `pip install -r requirements.txt`\n",
+    "        "
    ]
   }
  ],
