--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "528ee984",
+   "id": "ecd7c013",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "31fb028f",
+   "id": "f74182cf",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "ad36953a",
+   "id": "2ba654e7",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "a63744a4",
+   "id": "1f1eb2ed",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e0ae9102",
+   "id": "6833a266",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "cb76e629",
+   "id": "5e3bed57",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "3561e7a2",
+   "id": "d6b9a14f",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "6930d991",
+   "id": "ed4cf9ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3607a77f",
+   "id": "681115c7",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "617ca1b0",
+   "id": "2917ee9e",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87c68775",
+   "id": "29398035",
    "metadata": {},
    "source": [
     "# Jeudi \n",
@@ -279,12 +279,17 @@
     "    * création de graphique à l'aide de pandas / matplotlib \n",
     "* manipulation de JSON\n",
     "    * création / lecture avec la bibliothèque standart `json`\n",
-    "    \n"
+    "    \n",
+    "## Après-midi\n",
+    "\n",
+    "* POO\n",
+    "    * organisation des classes / architectures\n",
+    "        * éviter de stocker "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8dffe121",
+   "id": "c54eb8fc",
    "metadata": {},
    "source": [
     "# Vendredi \n",
@@ -302,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e142bd1",
+   "id": "7a2aeb07",
    "metadata": {},
    "outputs": [],
    "source": []
