--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ecd7c013",
+   "id": "8aa90d72",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f74182cf",
+   "id": "861e6b80",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2ba654e7",
+   "id": "0f6d48b1",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "1f1eb2ed",
+   "id": "bf804e75",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6833a266",
+   "id": "58887a6d",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "5e3bed57",
+   "id": "13e25d6f",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "d6b9a14f",
+   "id": "9d7cd445",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "ed4cf9ac",
+   "id": "14afd4db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "681115c7",
+   "id": "5072b7ce",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2917ee9e",
+   "id": "68d71d9c",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29398035",
+   "id": "f5c6699e",
    "metadata": {},
    "source": [
     "# Jeudi \n",
@@ -284,12 +284,12 @@
     "\n",
     "* POO\n",
     "    * organisation des classes / architectures\n",
-    "        * éviter de stocker "
+    "        * éviter de stocker des attributs qui contiennent la même chose mais différemment (age / année de naissance) car il peut y avoir des conflit si on "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c54eb8fc",
+   "id": "f940d9ea",
    "metadata": {},
    "source": [
     "# Vendredi \n",
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a2aeb07",
+   "id": "d5091623",
    "metadata": {},
    "outputs": [],
    "source": []
