--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8aa90d72",
+   "id": "80928b45",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "861e6b80",
+   "id": "b80fe96e",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "0f6d48b1",
+   "id": "2dd647b8",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "bf804e75",
+   "id": "99f5bac7",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "58887a6d",
+   "id": "b5fe3693",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "13e25d6f",
+   "id": "6718300e",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9d7cd445",
+   "id": "8882a92d",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "14afd4db",
+   "id": "d55bab75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5072b7ce",
+   "id": "b096e2aa",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68d71d9c",
+   "id": "4d1bc660",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5c6699e",
+   "id": "03a19432",
    "metadata": {},
    "source": [
     "# Jeudi \n",
@@ -284,12 +284,15 @@
     "\n",
     "* POO\n",
     "    * organisation des classes / architectures\n",
-    "        * éviter de stocker des attributs qui contiennent la même chose mais différemment (age / année de naissance) car il peut y avoir des conflit si on "
+    "        * gestion des attributs\n",
+    "            * éviter de stocker des attributs qui contiennent la même chose mais différemment (age / année de naissance) car il peut y avoir des conflit si on ne met pas tout à jour \n",
+    "            * stocker les attributs fixes (année de naissance est stocké en attribut) et calculer les dynamiques (l'age est calculé dans une méthode)\n",
+    "        * "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f940d9ea",
+   "id": "fee14808",
    "metadata": {},
    "source": [
     "# Vendredi \n",
@@ -307,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5091623",
+   "id": "9071972e",
    "metadata": {},
    "outputs": [],
    "source": []
