--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "80928b45",
+   "id": "11146c41",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "b80fe96e",
+   "id": "d8c9c17a",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2dd647b8",
+   "id": "adc14d24",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "99f5bac7",
+   "id": "26201845",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "b5fe3693",
+   "id": "a4f20ffe",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "6718300e",
+   "id": "f380adec",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "8882a92d",
+   "id": "093466cb",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "d55bab75",
+   "id": "d04f932d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b096e2aa",
+   "id": "6421157d",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d1bc660",
+   "id": "3177ff13",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03a19432",
+   "id": "45fdfb9e",
    "metadata": {},
    "source": [
     "# Jeudi \n",
@@ -287,12 +287,13 @@
     "        * gestion des attributs\n",
     "            * éviter de stocker des attributs qui contiennent la même chose mais différemment (age / année de naissance) car il peut y avoir des conflit si on ne met pas tout à jour \n",
     "            * stocker les attributs fixes (année de naissance est stocké en attribut) et calculer les dynamiques (l'age est calculé dans une méthode)\n",
-    "        * "
+    "        * organisation des classes\n",
+    "            * "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fee14808",
+   "id": "653c71b2",
    "metadata": {},
    "source": [
     "# Vendredi \n",
@@ -310,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9071972e",
+   "id": "943a322b",
    "metadata": {},
    "outputs": [],
    "source": []
