--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "11146c41",
+   "id": "042a033e",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "d8c9c17a",
+   "id": "1fb62122",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "adc14d24",
+   "id": "76fa4677",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "26201845",
+   "id": "5527d5c9",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "a4f20ffe",
+   "id": "8d71cee8",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f380adec",
+   "id": "0d6a9977",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "093466cb",
+   "id": "0a9f68e2",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "d04f932d",
+   "id": "38a3a489",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6421157d",
+   "id": "a83e83d1",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3177ff13",
+   "id": "851d86b7",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45fdfb9e",
+   "id": "ccb79d34",
    "metadata": {},
    "source": [
     "# Jeudi \n",
@@ -288,12 +288,14 @@
     "            * éviter de stocker des attributs qui contiennent la même chose mais différemment (age / année de naissance) car il peut y avoir des conflit si on ne met pas tout à jour \n",
     "            * stocker les attributs fixes (année de naissance est stocké en attribut) et calculer les dynamiques (l'age est calculé dans une méthode)\n",
     "        * organisation des classes\n",
-    "            * "
+    "            * héritage (inheritance) : relation \"est un\" \n",
+    "                * s'écrit comme ça `class MaFille(MaMere):`\n",
+    "            * composition : relation \"possède un\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "653c71b2",
+   "id": "f203afb8",
    "metadata": {},
    "source": [
     "# Vendredi \n",
@@ -311,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "943a322b",
+   "id": "924d268c",
    "metadata": {},
    "outputs": [],
    "source": []
