--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "042a033e",
+   "id": "eec10a36",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "1fb62122",
+   "id": "2acf7e3c",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "76fa4677",
+   "id": "32389bbe",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "5527d5c9",
+   "id": "bbf5803e",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "8d71cee8",
+   "id": "a1db7a3a",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "0d6a9977",
+   "id": "f70ce975",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "0a9f68e2",
+   "id": "deb1be05",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "38a3a489",
+   "id": "b08ba206",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a83e83d1",
+   "id": "a49d870a",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "851d86b7",
+   "id": "b2e93e71",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccb79d34",
+   "id": "addb7fd3",
    "metadata": {},
    "source": [
     "# Jeudi \n",
@@ -290,12 +290,13 @@
     "        * organisation des classes\n",
     "            * héritage (inheritance) : relation \"est un\" \n",
     "                * s'écrit comme ça `class MaFille(MaMere):`\n",
+    "                * on peut appeler les méthodes de la classe mère depuis une méthode de la classe fille en appelant `super()`\n",
     "            * composition : relation \"possède un\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f203afb8",
+   "id": "5021cd84",
    "metadata": {},
    "source": [
     "# Vendredi \n",
@@ -313,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "924d268c",
+   "id": "8cfeacaf",
    "metadata": {},
    "outputs": [],
    "source": []
