--- a/tape_en_cours/Jour 5.ipynb
+++ b/tape_en_cours/Jour 5.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "736dd506",
+   "id": "33cb9174",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9032be88",
+   "id": "213a4911",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "48b3c8c6",
+   "id": "efe218cc",
    "metadata": {},
    "outputs": [
     {
@@ -70,10 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e84035d5",
+   "execution_count": 26,
+   "id": "d4a26f60",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
     {
      "ename": "AttributeError",
      "evalue": "'AccesAttributs' object has no attribute '__attribut3'",
@@ -81,19 +88,43 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(a\u001b[38;5;241m.\u001b[39m__attribut3)\n",
+      "Cell \u001b[0;32mIn [26], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m a\u001b[38;5;241m.\u001b[39mprint_attribut3()\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(a\u001b[38;5;241m.\u001b[39m__attribut3)\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'AccesAttributs' object has no attribute '__attribut3'"
      ]
     }
    ],
    "source": [
+    "a.print_attribut3()\n",
     "print(a.__attribut3)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "6854a0fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'attribut1': 'changé',\n",
+       " '_attribut2': 'changé',\n",
+       " '_AccesAttributs__attribut3': 3}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vars(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "192fefb6",
+   "id": "c701118f",
    "metadata": {},
    "outputs": [],
    "source": []
