--- a/tape_en_cours/Jour 5.ipynb
+++ b/tape_en_cours/Jour 5.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "968c49c4",
+   "id": "4146c73a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "171a21f8",
+   "id": "4f67fb1c",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a70a125a",
+   "id": "b7bbacaa",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1ddf822d",
+   "id": "42115d39",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5c1788fb",
+   "id": "c3ee2e36",
    "metadata": {},
    "outputs": [
     {
@@ -122,13 +122,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "028c2409",
+   "cell_type": "markdown",
+   "id": "66cdaabb",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# SI "
+    "Si vous voulez protéger l'accès à des attributs de vos objets, en python vous pouvez :\n",
+    "    * préfixer avec `_` => convention indiquant qu'il est privé \n",
+    "    * préfixer avec `__` => rend l'accès plus compliqué (uniquement depuis l'extérieur de la classe), mais la modification est toujors possible\n",
+    "    * appeler des méthodes quand vous croyer manipuler un attribut => les propriétés (`properties`) "
    ]
   }
  ],
