--- a/tape_en_cours/Jour 5.ipynb
+++ b/tape_en_cours/Jour 5.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4146c73a",
+   "id": "7f338918",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4f67fb1c",
+   "id": "a0fe0bf5",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b7bbacaa",
+   "id": "1d86986e",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "42115d39",
+   "id": "93f48bb2",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c3ee2e36",
+   "id": "81e11af9",
    "metadata": {},
    "outputs": [
     {
@@ -123,14 +123,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66cdaabb",
+   "id": "a9831490",
    "metadata": {},
    "source": [
     "Si vous voulez protéger l'accès à des attributs de vos objets, en python vous pouvez :\n",
     "    * préfixer avec `_` => convention indiquant qu'il est privé \n",
     "    * préfixer avec `__` => rend l'accès plus compliqué (uniquement depuis l'extérieur de la classe), mais la modification est toujors possible\n",
-    "    * appeler des méthodes quand vous croyer manipuler un attribut => les propriétés (`properties`) "
+    "    * appeler des méthodes quand vous croyer manipuler un attribut => les propriétés (`properties`) plus d'infos ici : https://realpython.com/python-property/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9188d1bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
