--- a/tape_en_cours/Jour 5.ipynb
+++ b/tape_en_cours/Jour 5.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7f338918",
+   "id": "14843adf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a0fe0bf5",
+   "id": "a017a367",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1d86986e",
+   "id": "8a457fc9",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "93f48bb2",
+   "id": "518c93fd",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "81e11af9",
+   "id": "cd3823ae",
    "metadata": {},
    "outputs": [
     {
@@ -123,19 +123,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9831490",
+   "id": "c76c64a7",
    "metadata": {},
    "source": [
     "Si vous voulez protéger l'accès à des attributs de vos objets, en python vous pouvez :\n",
+    "\n",
     "    * préfixer avec `_` => convention indiquant qu'il est privé \n",
-    "    * préfixer avec `__` => rend l'accès plus compliqué (uniquement depuis l'extérieur de la classe), mais la modification est toujors possible\n",
-    "    * appeler des méthodes quand vous croyer manipuler un attribut => les propriétés (`properties`) plus d'infos ici : https://realpython.com/python-property/"
+    "    * préfixer avec `__` => rend l'accès plus compliqué (uniquement depuis l'extérieur de la classe), mais la modification est toujours possible\n",
+    "    * appeler des méthodes quand vous croyez manipuler un attribut => les propriétés (`properties`) plus d'infos ici : https://realpython.com/python-property/"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9188d1bc",
+   "id": "e72509d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ae1c291",
    "metadata": {},
    "outputs": [],
    "source": []
