--- a/tape_en_cours/Jour 5.ipynb
+++ b/tape_en_cours/Jour 5.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "14843adf",
+   "id": "6f39b460",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a017a367",
+   "id": "225d9bcb",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8a457fc9",
+   "id": "ce3766bf",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "518c93fd",
+   "id": "57c40f46",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cd3823ae",
+   "id": "af5eca7c",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c76c64a7",
+   "id": "e06f0d2e",
    "metadata": {},
    "source": [
     "Si vous voulez protéger l'accès à des attributs de vos objets, en python vous pouvez :\n",
@@ -135,16 +135,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e72509d0",
+   "execution_count": 27,
+   "id": "05ba1dab",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'str' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtoto\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtata\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'str' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "\"toto\" / \"tata\""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ae1c291",
+   "id": "75f879c2",
    "metadata": {},
    "outputs": [],
    "source": []
