--- a/tape_en_cours/Jour 5.ipynb
+++ b/tape_en_cours/Jour 5.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6f39b460",
+   "id": "18dedb92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "225d9bcb",
+   "id": "af15a933",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ce3766bf",
+   "id": "c9370ac8",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "57c40f46",
+   "id": "a238c429",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "af5eca7c",
+   "id": "d18d0e96",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e06f0d2e",
+   "id": "f9904f0d",
    "metadata": {},
    "source": [
     "Si vous voulez protéger l'accès à des attributs de vos objets, en python vous pouvez :\n",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "05ba1dab",
+   "id": "c8ea9bed",
    "metadata": {},
    "outputs": [
     {
@@ -157,8 +157,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "51f376fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "75f879c2",
+   "id": "e8d49184",
    "metadata": {},
    "outputs": [],
    "source": []
