--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -308,7 +308,14 @@
     "    * on partage un fichier permetant de le reconstruire (le fichier requirements.txt)\n",
     "        * pour le créer : `pip freeze > requirements.txt`\n",
     "        * pour l'utiliser : `pip install -r requirements.txt`\n",
-    "        "
+    "* reflexion sur l'architecture d'un projet POO\n",
+    "* exercice sur la réimplémentation de la `pathlib`\n",
+    "\n",
+    "## Après-midi\n",
+    "\n",
+    "* initiation aux tests unitaires\n",
+    "    * on ne peut tester facilement que les \"fonctions pures\" => à une entrée donnée on connait parfaitement la sortie (donc pas de print, de random, d'accès à des fichiers, d'accès à des composants externes)\n",
+    "    * pour les tests o"
    ]
   },
   {
