--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -315,7 +315,14 @@
     "\n",
     "* initiation aux tests unitaires\n",
     "    * on ne peut tester facilement que les \"fonctions pures\" => à une entrée donnée on connait parfaitement la sortie (donc pas de print, de random, d'accès à des fichiers, d'accès à des composants externes)\n",
-    "    * pour les tests o"
+    "    * pour les tests on utilise `pytest` et on va faire des `asserts` sur notre code\n",
+    "    \n",
+    "* initation à la programmation de GUI\n",
+    "    * notion de programmation événementielle \n",
+    "        * utilisation de fonctions de callback (qui vont réagir à des événements)\n",
+    "        * ne JAMAIS bloquer la boucle d'événements sous peine de voir sa fenetre grisée par l'OS\n",
+    "        \n",
+    "* initiation au "
    ]
   },
   {
