--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -322,7 +322,7 @@
     "        * utilisation de fonctions de callback (qui vont réagir à des événements)\n",
     "        * ne JAMAIS bloquer la boucle d'événements sous peine de voir sa fenetre grisée par l'OS\n",
     "        \n",
-    "* initiation au "
+    "* initiation au développement web avec flask (voir fichier `exemple_flask.py`)"
    ]
   },
   {
